--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "mime": "^1.6.0",
+    "mime-db": "^1.46.0",
+    "mime-lookup": "^0.0.2",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "send": "^0.17.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
