--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "ejs": "^3.1.8",
     "jquery": "^3.6.0",
     "mime": "^1.6.0",
     "mime-db": "^1.46.0",
