--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^4.6.1",
     "ejs": "^3.1.8",
     "jquery": "^3.6.0",
     "mime": "^1.6.0",
@@ -14,6 +14,7 @@
     "mime-lookup": "^0.0.2",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.4.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
